--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
@@ -105,10 +105,9 @@
                         </button>
                     </div>
                 </form>
-                <button type="button" class="btn btn-success mt-3" data-bs-toggle="modal"
-                        data-bs-target="#addProductModal">
+                <a th:href="@{/Admin/product-manager/add}" class="btn btn-success">
                     Thêm Sản Phẩm
-                </button>
+                </a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
