--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/list.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/list.html
@@ -19,6 +19,9 @@
         <div class="col-md-2">
             <button type="submit" class="btn btn-primary w-100">Tìm kiếm</button>
         </div>
+        <div class="col-md-2">
+            <a th:href="@{/Admin/stock-import/import}" class="btn btn-success w-100">Thêm mới</a>
+        </div>
     </form>
 
     <hr>
