--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quản Lý Khách Hàng </title>
+    <title>Quản Lý Kho </title>
     <link rel="stylesheet" th:href="@{/css/admin/fragments/sidebar.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/admin/fragments/footer.css}">
@@ -27,11 +27,13 @@
             p {
                 margin: 0;
             }
+
             &.alert-success {
                 background-color: #d4edda;
                 color: #155724;
                 border-left: 5px solid #28a745;
             }
+
             .close-btn {
                 background: none;
                 border: none;
@@ -53,37 +55,24 @@
 <div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
     <div class="wrapper col-md-9 container mt-4">
-        <h1 class="tittle mb-4">Quản Lý Khách Hàng</h1>
+        <h1 class="tittle mb-4">Quản Lý Kho</h1>
         <div class="form-mb-4">
             <div class="search-container">
-                <form class="search-form" th:action="@{/customers}" method="get">
+                <form class="search-form" th:action="@{/wareHouses}" method="get">
                     <select class="input-select" name="searchField" id="searchField">
-                        <option value="name" th:selected="${field == 'name'}">Tên</option>
-                        <option value="id" th:selected="${field == 'id'}">ID</option>
-                        <option value="phone" th:selected="${field == 'phone'}">Số điện thoại</option>
-                        <option value="address" th:selected="${field == 'address'}">Địa chỉ</option>
+                        <option value="productName" th:selected="${field == 'productName'}">Tên Sản Phẩm</option>
+                        <option value="supplierName" th:selected="${field == 'supplierName'}">Tên Nhà Cung Cấp</option>
                     </select>
-                    <input class="form-control form-control-sm" type="text" id="searchInput" name="searchInput" th:value="${filterKeyWord}"
+                    <input class="form-control form-control-sm" type="text" id="searchInput" name="searchInput"
+                           th:value="${filterKeyWord}"
                            placeholder="Nhập thông tin cần tìm..." aria-label="Search">
                     <button class="btn btn-sm" style="background-color: #D10024; color: white;" type="submit">
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-<!--                <a href="/customers/create" class="btn-create btn btn-success">Thêm Khách Hàng</a>-->
+                <a href="/transactions/history" class="btn-create btn btn-success">Lịch sử xuất/nhập kho</a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
-        </div>
-        <div th:if="${formatError != null}">
-            <div class="alert alert-danger alert-dismissible fade show" role="alert">
-                <span th:text="${formatError}"></span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
-        </div>
-        <div th:if="${customers.isEmpty()}">
-            <div class="alert alert-info alert-dismissible fade show" role="alert">
-                <span>Không có khách hàng phù hớp với dữ liệu !</span>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
         </div>
         <div th:if="${successfulNotification != null}">
             <div class="alert alert-success alert-dismissible fade show" role="alert">
@@ -91,65 +80,72 @@
                 <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
         </div>
+        <div th:if="${wareHouses.isEmpty()}">
+            <div class="alert alert-info alert-dismissible fade show" role="alert">
+                <span>Không có thông tin phù hớp với dữ liệu !</span>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
         <div th:if="${message}" class="alert alert-info">
             <p th:text="${message}"></p>
             <button class="close-btn" onclick="this.parentElement.style.display='none'">&times;</button>
         </div>
-        <form th:action="@{/customers/deleteAll}" id="deleteForm" method="post">
+        <form th:action="@{/wareHouses/deleteAll}" id="deleteForm" method="post">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th><label for="selectAll"></label><input type="checkbox" id="selectAll"></th>
-                    <th>Tên Khách Hàng</th>
-                    <th>Số Điện Thoại</th>
-                    <th>Địa Chỉ</th>
-                    <th>Email</th>
-                    <th>Ngày Sinh</th>
+                    <th>Tên Sản Phẩm</th>
+                    <th>Nhà Cung Cấp</th>
+                    <th>Số Lượng Tồn</th>
+                    <th>Đơn Giá</th>
+                    <th>Thành Tiền</th>
+                    <th>Trạng Thái</th>
                     <th>Thao Tác</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item : ${customers}">
+                <tr th:each="item  : ${wareHouses}">
                     <td>
                         <label>
-                            <input type="checkbox" class="employeeCheckbox" name="customerIds" th:value="${item.customerId}">
+                            <input type="checkbox" class="employeeCheckbox" name="customerIds">
                         </label>
                     </td>
-                    <td th:text="${item.customerName}"></td>
-                    <td th:text="${item.phoneNumber}"></td>
-                    <td th:text="${item.address}"></td>
-                    <td th:text="${item.user != null ? item.user.email : 'Không có email'}"></td>
-                    <td th:text="${#temporals.format(item.birthDate , 'dd/MM/yyyy')}"></td>
+                    <td th:text="${item.product != null ? item.product.name : 'K co Product'}"></td>
+                    <td th:text="${item.supplier != null ? item.supplier.name : 'K co Supplier'}"></td>
+                    <td th:text="${item.quantity}"></td>
+                    <td th:text="${item.price}"></td>
+                    <td th:text="(${item.price} * ${item.quantity})"></td>
                     <td>
-                        <!-- Nút Chỉnh sửa (Icon bút chì) -->
-                        <a th:href="@{/customers/update/{id}(id=${item.customerId})}"
+                        <span class="status-badge"
+                              th:classappend="${item.quantity == 0} ? 'badge bg-danger'
+                                             : (${item.quantity < 100} ? 'badge bg-warning'
+                                             : (${item.quantity >= 100} ? 'badge bg-success' ))"
+                              th:text="${item.quantity == 0} ? 'Hết hàng'
+                                       : (${item.quantity < 100} ? 'Số lượng ít'
+                                       : (${item.quantity >= 100} ? 'Ổn định'))">
+                        </span>
+                    </td>
+
+                    </td>
+                    <td>
+                        <a th:href="@{/warehouses/export/{id}(id=${item.id})}"
                            class="btn btn-warning btn-sm"
                            title="Chỉnh sửa">
-                            <i class="fas fa-edit"></i>
+                            <i class="fa fa-upload"></i>
                         </a>
-
-                        <!-- Nút Xóa (Icon thùng rác) -->
-                        <form th:href="@{/customers/delete/{id}(id=${item.customerId})}"
-                              method="post"
-                              class="d-inline"
-                              onsubmit="return confirmDelete();">
-                            <button type="submit" class="btn btn-danger btn-sm" title="Xóa">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        </form>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <button type="submit" class="btn btn-danger mt-2">Xóa khách hàng đã chọn</button>
+            <button type="submit" class="btn btn-danger mt-2">Xóa thông tin đã chọn</button>
         </form>
-
-
         <nav aria-label="Page navigation" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
 
-                <li class="page-item" th:classappend="${customers.first} ? 'disabled'">
-                    <a class="page-link" th:href="@{/customers(page=${customers.number}, searchField=${field}, searchInput=${filterKeyWord})}"
+                <li class="page-item" th:classappend="${wareHouses.first} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/wareHouses(page=${wareHouses.number}, searchField=${field}, searchInput=${filterKeyWord})}"
                        aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                     </a>
@@ -157,12 +153,13 @@
 
                 <li class="page-item disabled">
       <span class="page-link">
-        Trang <span th:text="${customers.number + 1}"></span> / <span th:text="${customers.totalPages}"></span>
+        Trang <span th:text="${wareHouses.number + 1}"></span> / <span th:text="${wareHouses.totalPages}"></span>
       </span>
                 </li>
 
-                <li class="page-item" th:classappend="${customers.last} ? 'disabled'">
-                    <a class="page-link" th:href="@{/customers(page=${customers.number + 2}, searchField=${field}, searchInput=${filterKeyWord})}"
+                <li class="page-item" th:classappend="${wareHouses.last} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/wareHouses(page=${wareHouses.number + 2}, searchField=${field}, searchInput=${filterKeyWord})}"
                        aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                     </a>
@@ -176,7 +173,7 @@
 <script th:src="@{/js/admin/layout.js}">
 
 </script>
-<script th:fragment="sidebarScript" >
+<script th:fragment="sidebarScript">
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
         document.body.classList.toggle('sidebar-collapsed');
