--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -34,7 +34,7 @@
         </a>
         <ul class="treeview-menu">
           <li><a th:href="@{/Admin/orders-manager}"><i class="fa-solid fa-clipboard"></i> Đơn hàng</a></li>
-          <li><a th:href="@{/customers}"><i class="fa-solid fa-users"></i> Khách hàng</a></li>
+          <li><a th:href="@{/Admin/customer-management}"><i class="fa-solid fa-users"></i> Khách hàng</a></li>
         </ul>
       </li>
 
