--- a/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/customer/customer-table.html
@@ -56,7 +56,7 @@
         <h1 class="tittle mb-4">Quản Lý Khách Hàng</h1>
         <div class="form-mb-4">
             <div class="search-container">
-                <form class="search-form" th:action="@{/customers}" method="get">
+                <form class="search-form" th:action="@{/Admin/customer-management}" method="get">
                     <select class="input-select" name="searchField" id="searchField">
                         <option value="name" th:selected="${field == 'name'}">Tên</option>
                         <option value="id" th:selected="${field == 'id'}">ID</option>
@@ -69,7 +69,6 @@
                         <i class="fas fa-search"></i>
                     </button>
                 </form>
-                <a href="/customers/create" class="btn-create btn btn-success">Thêm Khách Hàng</a>
             </div>
             <hr style="border: 1px solid #333333; margin-top: 8px;">
         </div>
@@ -95,55 +94,50 @@
             <p th:text="${message}"></p>
             <button class="close-btn" onclick="this.parentElement.style.display='none'">&times;</button>
         </div>
-        <form th:action="@{/customers/deleteAll}" id="deleteForm" method="post">
+        <form th:action="@{/Admin/customer-management/deleteAll}" id="deleteForm" method="post">
             <table class="table table-striped table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th><label for="selectAll"></label><input type="checkbox" id="selectAll"></th>
+                    <th>STT</th>
                     <th>Tên Khách Hàng</th>
                     <th>Số Điện Thoại</th>
                     <th>Địa Chỉ</th>
                     <th>Email</th>
                     <th>Ngày Sinh</th>
+                    <th>Trạng thái</th>
                     <th>Thao Tác</th>
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="item : ${customers}">
+                <tr th:each="customer, c : ${customers}">
                     <td>
-                        <label>
-                            <input type="checkbox" class="employeeCheckbox" name="customerIds" th:value="${item.customerId}">
-                        </label>
+                        <div class="form-check">
+                            <input type="checkbox" class="form-check-input customerCheckbox" th:value="${customer.customerId}" id="customerCheck-${c.index}">
+                            <label class="form-check-label" th:for="'customerCheck-' + ${c.index}">
+                                <i class="bi bi-check-square"></i>
+                            </label>
+                        </div>
                     </td>
-                    <td th:text="${item.customerName}"></td>
-                    <td th:text="${item.phoneNumber}"></td>
-                    <td th:text="${item.address}"></td>
-                    <td th:text="${item.user != null ? item.user.email : 'Không có email'}"></td>
-                    <td th:text="${#temporals.format(item.birthDate , 'dd/MM/yyyy')}"></td>
-                    <td>
+                    <td th:text="${c.index + 1}"></td>
+                    <td th:text="${customer.customerName}"></td>
+                    <td th:text="${customer.phoneNumber}"></td>
+                    <td th:text="${customer.address}"></td>
+                    <td th:text="${customer.user != null ? customer.user.email : 'Không có email'}"></td>
+                    <td th:text="${#temporals.format(customer.birthDate , 'dd/MM/yyyy')}"></td>
+                    <td class="d-flex justify-content-center">
                         <!-- Nút Chỉnh sửa (Icon bút chì) -->
-                        <a th:href="@{/customers/update/{id}(id=${item.customerId})}"
+                        <a th:href="@{/customers/update/{id}(id=${customer.customerId})}"
                            class="btn btn-warning btn-sm"
                            title="Chỉnh sửa">
                             <i class="fas fa-edit"></i>
                         </a>
-
-                        <!-- Nút Xóa (Icon thùng rác) -->
-                        <form th:href="@{/customers/delete/{id}(id=${item.customerId})}"
-                              method="post"
-                              class="d-inline"
-                              onsubmit="return confirmDelete();">
-                            <button type="submit" class="btn btn-danger btn-sm" title="Xóa">
-                                <i class="fas fa-trash"></i>
-                            </button>
-                        </form>
                     </td>
                 </tr>
                 </tbody>
             </table>
-            <button type="submit" class="btn btn-danger mt-2">Xóa khách hàng đã chọn</button>
         </form>
-
+        <button type="button" id="deleteBtn" class="btn btn-danger btn-sm" title="Xóa" onclick="deleteSelectedCustomer()">Xóa khách hàng</button>
 
         <nav aria-label="Page navigation" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
@@ -173,10 +167,11 @@
     </div>
 </main>
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
-<script th:src="@{/js/admin/layout.js}">
+<script th:src="@{/js/admin/layout.js}"></script>
 
-</script>
-<script th:fragment="sidebarScript" >
+<script th:src="@{/js/admin/deleteMultipleCustomer.js}"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script th:fragment="sidebarScript">
     // Toggle sidebar
     document.getElementById('sidebar-toggle').addEventListener('click', () => {
         document.body.classList.toggle('sidebar-collapsed');
