--- a/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product/listProduct.html
@@ -141,7 +141,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${products.empty}">
+            <tr th:if="${products.isEmpty()}">
                 <td colspan="7" class="text-center">Không có sản phẩm nào để hiển thị</td>
             </tr>
             <tr th:each="product,p : ${products}">
@@ -161,10 +161,10 @@
                 <td th:text="${product.formattedPrice}"></td>
                 <td th:text="${product.category.name}"></td>
                 <td th:text="${product.brand.name}"></td>
-                <td>
+                <td class="d-flex justify-content-center">
                     <!-- Nút Chỉnh sửa (Icon bút chì) -->
                     <a th:href="@{/Admin/product-manager/edit/{productID}(productID=${product.productID})}"
-                       class="btn btn-warning btn-sm"
+                       class="btn btn-warning "
                        title="Chỉnh sửa">
                         <i class="fas fa-edit"></i>
                     </a>
