--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -254,6 +254,8 @@
       <span>or use your email for registration</span>
       <input type="text" id="username" name="username" placeholder="Username" required>
       <input type="password" id="password" name="password" placeholder="Password" required>
+      <input type="email" id="email" name="email" placeholder="Email"/>
+      <input type="text" id="fullName" name="fullName" placeholder="Full Name"/>
       <button type="submit">Register</button>
     </form>
   </div>
