--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listProduct.html
@@ -141,7 +141,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:if="${products.empty}">
+            <tr th:if="${products.isEmpty()}">
                 <td colspan="7" class="text-center">Không có sản phẩm nào để hiển thị</td>
             </tr>
             <tr th:each="product,p : ${products}">
@@ -177,6 +177,14 @@
         </button>
         <nav aria-label="Phân trang sản phẩm" class="mt-3">
             <ul class="pagination justify-content-end align-items-center">
+
+                <li class="page-item" th:classappend="${currentPage == 1} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/Admin/product-manager(page=1, keyword=${keyword}, minPrice=${minPrice}, maxPrice=${maxPrice}, category=${category})}"
+                       aria-label="First">
+                        <span aria-hidden="true">&laquo;&laquo;</span>
+                    </a>
+                </li>
                 <!-- Nút Previous -->
                 <li class="page-item" th:classappend="${productPage.first} ? 'disabled'">
                     <a class="page-link"
@@ -200,6 +208,14 @@
                        th:href="@{/Admin/product-manager(page=${productPage.number + 2}, keyword=${keyword}, minPrice=${minPrice}, maxPrice=${maxPrice}, category=${category})}"
                        aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+
+                <li class="page-item" th:classappend="${currentPage == totalPages} ? 'disabled'">
+                    <a class="page-link"
+                       th:href="@{/Admin/product-manager(page=${totalPages}, keyword=${keyword}, minPrice=${minPrice}, maxPrice=${maxPrice}, category=${category})}"
+                       aria-label="Last">
+                        <span aria-hidden="true">&raquo;&raquo;</span>
                     </a>
                 </li>
             </ul>
